webRequest: Also identify frames for non-RDH-initiated requests

BUG=633737
TEST=./browser_tests --gtest_filter=ExtensionWebRequestApiTest.WebRequestTestOSDD

Review-Url: https://codereview.chromium.org/2238383003
Cr-Commit-Position: refs/heads/master@{#414031}

Former-commit-id: ce6f5977435ced2b9a30b4294ebe91a1e806fbeb